# vllm-internal-project-dashboard

./: .gitignore  CONTRIBUTING.md  README.md  cspell.json  flake.nix  index.html  pyproject.toml
.cspell/: project-words.txt
.github/workflows/: ci-collect.yml  ci.yml  daily-update.yml  deploy-pages.yml  health-check.yml  hourly-master.yml  manual-update.yml  nightly-ci.yml  pr-preview.yml  queue-monitor.yml  ready-tickets-live.yml  repo-governance.yml  secrets-scan.yml  sync-upstream.yml  test-build.yml  user-signup.yml
assets/css/: dashboard.css
assets/js/: auth.js  ci-analytics.js  ci-health.js  ci-queue.js  ci-ready.js  ci-testbuild.js  dashboard.js  op-perf.js  token-vault.js  utils.js
config/: projects.yaml  quarantine.yaml
dashboards/: dashboard-audit.md  pr-tracker.md  weekly-digest.md
data/: users.json
data/aiter/: activity.json  build_times.json  issues.json  prs.json  releases.json
data/atom/: activity.json  issues.json  prs.json  releases.json
data/flydsl/: activity.json  build_times.json  issues.json  prs.json  releases.json
data/history/: 2026-W11.json  2026-W12.json  2026-W13.json  2026-W14.json  2026-W15.json
data/jax/: activity.json  build_times.json  issues.json  prs.json  releases.json  test_results.json
data/llvm/: activity.json  build_times.json  issues.json  prs.json  releases.json
data/migraphx/: activity.json  build_times.json  issues.json  prs.json  releases.json
data/mori/: activity.json  build_times.json  issues.json  prs.json  releases.json
data/pytorch/: activity.json  build_times.json  issues.json  prs.json  releases.json  test_results.json
data/sglang/: activity.json  build_times.json  issues.json  prs.json  releases.json  test_results.json
data/site/: projects.json
data/transformer_engine/: issues.json  prs.json  releases.json
data/triton/: activity.json  build_times.json  issues.json  prs.json  releases.json  test_results.json
data/vllm/: activity.json  build_times.json  engineer_activity.json  issues.json  parity_report.json  pr_scores.json  prs.json  releases.json  test_results.json
data/xla/: activity.json  build_times.json  issues.json  prs.json  releases.json  test_results.json
docs/: index.html
docs/_data/: projects.json
docs/atom-benchmark/: data.js
nix/: config.nix
nix/shells/: dashboard.nix  default.nix  minimal.nix  shell-utils.sh
scripts/: build_site.py  collect.py  collect_activity.py  collect_build_times.py  collect_ci.py  collect_vllm_ci.py  render.py  snapshot.py
scripts/ci/: README.md  analyzer.py  buildkite_client.py  models.py
scripts/vllm/: README.md  __init__.py  audit_dashboard_data.py  backfill_ready_ticket_comments.py  collect_activity.py  collect_amd_test_matrix.py  collect_analytics.py  collect_group_changes.py  collect_hotness.py  collect_queue_snapshot.py  collect_test_builds.py  config_parity.py  constants.py  encrypt_kill_auth.py  encrypt_roster.py  engineers.py  omni_surge_watcher.py  pipelines.py  pr_scoring.py  process_signup.py  queue_issue_watcher.py  queue_zombie_watcher.py  register_test_build.py  secrets_scan.py  sync_ready_tickets.py
tests/: test_data_freshness.py  test_data_integrity.py  test_job_links.py  test_link_registry.py  test_queue_automation.py  test_render_safety.py
tests/vllm/: conftest.py  test_auth_and_token_isolation.py  test_backfill_ready_ticket_comments.py  test_buildkite_client.py  test_buildkite_pii_scrub.py  test_ci_utils.py  test_collect_amd_test_matrix.py  test_collect_analytics.py  test_collect_ci_cache_coverage.py  test_collect_hotness.py  test_collect_pr_issue_filter.py  test_collect_queue_snapshot.py  test_collect_test_builds.py  test_dashboard_audit.py  test_dashboard_smoke.py  test_dashboard_trends_data.py  test_data_freshness.py  test_data_integrity.py  (+19 more)
(+221 files in other folders)
