[project]
name = "panoptes"
version = "0.1.0"
description = "Panoptes — vLLM ecosystem project dashboard"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "requests",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.10",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12",
    "types-requests",
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["scripts"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "E741"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
